# minion

./: .env.example  .gitignore  LICENSE  README.md  config.toml  minion.py  pyproject.toml  tools.toml
minion/: config.py  history.py  parallel.py  prefetch.py  quiet.py  toolshed.py  worktree.py
minion/agents/: definitions.py
minion/blueprints/: base.py  build.py  fix.py  resume.py  review.py  test.py
minion/dashboard/: app.py
minion/hooks/: safety.py  validation.py
templates/: CLAUDE.md.example  CLAUDE.subdirectory.md.example
tests/: test_config.py  test_history.py  test_prefetch.py  test_quiet.py  test_worktree.py
